# acuity-dioxus

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dioxus.toml  README.md  justfile
assets/: tailwind.css
assets/styling/: chain-status.css  home.css  indexer-status.css  ipfs-status.css  item_view.css  main.css  manage_accounts.css  navbar.css  profile.css  publish_feed.css  publish_post.css  sidebar.css
src/: accounts.rs  acuity_runtime.rs  comment.rs  content.rs  feed.rs  indexer_api.rs  item.rs  main.rs  post.rs  profile.rs  runtime_client.rs
src/views/: chain_status.rs  components.rs  home.rs  indexer_status.rs  ipfs_status.rs  item_view.rs  manage_accounts.rs  mod.rs  navbar.rs  profile.rs  publish_feed.rs  publish_post.rs
src/views/item_view/: comment_card.rs  feed_posts.rs  loader.rs  mod.rs  reactions.rs  types.rs
src/views/profile/: edit.rs  helpers.rs  mod.rs  view.rs
