[package]
name = "acuity-dioxus"
version = "0.1.0"
authors = ["Jonathan Brown <jbrown@acuity.network>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
futures = "0.3"
base64 = "0.22"
crypto_secretbox = { version = "0.1.1", features = ["alloc", "salsa20"] }
home = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
scrypt = "0.11"
schnorrkel = "0.11.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp-core = { version = "39.0.0", features = ["std"] }
subxt = { version = "0.50.0", features = ["native"] }
subxt-signer = { version = "0.50.0", default-features = false, features = ["polkadot-js-compat"] }
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = "0.28"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
